--- a/scratch.html
+++ b/scratch.html
@@ -32,7 +32,7 @@
     <div class="top">
     <h1 class="text">All about me page</h1>
     <h2 class="text" id="section1">Why I know I'm right for this job:</h2> 
-    <img src="./assets/img/IMG_1935.JPG" alt="Josh Tanner" class="center"/>
+    <img src="assets/img/IMG_1935.JPG" alt="Josh Tanner" class="center"/>
     <h3 class="text">This is me, I have lots of good qualities and I will be perfect for your team.</h3>
     </div>
 
